--- a/singleView.css
+++ b/singleView.css
@@ -54,6 +54,7 @@ div#collection > * {
   flex-basis: var(--img-scale);
   text-align: center;
   margin-bottom: -0.25rem;
+  border: 3px solid;
 }
 
 #selectors {
@@ -63,6 +64,7 @@ div#collection > * {
   row-gap: 0.1rem;
   margin: 20px;
   justify-content: center;
+  padding: 1em;
 }
 
 
